crates/resource/tests/probes/derive_slot_option_wrapped.stderr
error: `#[credential]` slot must currently be exactly `SlotCell<CredentialGuard<C>>` — `Option<…>`- and `Lazy<…>`-wrapped slots are not yet supported by the generated accessor; got: Option < SlotCell < CredentialGuard < FakeCred > > >
  --> tests/probes/derive_slot_option_wrapped.rs:18:9
   |
18 |     db: Option<SlotCell<CredentialGuard<FakeCred>>>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
